[package]
name = "pac-human"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
rand = "0.8.5"

[[bin]]
name = "pacman"
path = "src/pacman.rs"

[[bin]]
name = "fox"
path = "src/fox.rs"

[[bin]]
name = "packman2"
path = "src/packman2.rs"